# yquant

./: .gitignore  IMPLEMENTATION_RESEARCH.md  README.md  config.example.toml  pyproject.toml  量化交易-AI系统_技术方案.md
.github/workflows/: ci.yml
docs/: 00_README_文档包说明.md  01_开源竞品调研与生态位分析.md  02A_ADR汇总与状态表.md  02_思想实验记录.md  03_yquant技术方案_v2_完整版.md  03_yquant技术方案_v3.1_完整版.md  04_SOW工作包总表_v3.1.md  04_外包工作说明书_SOW.md  05_README_阶段二文档包说明.md  05_废止与归档清单.md  06_测试与质量保障_v3.1.md  06_测试与质量保障体系.md  07_可观测性_审计与回放_v3.1.md  07_可观测性_审计与回放规范.md  08_上线阶梯_v3.1.md  08_模拟盘与小资金上线方案.md  09_模型评估与可解释性_v3.1.md  09_模型评估与可解释性框架.md  10_阶段二SOW增补.md  12_目标函数重设与v3设计提案.md  WP6_陪跑与移交材料.md  icebox.md
docs/archive/: 05_README_阶段二文档包说明.md  06_测试与质量保障体系.md  07_可观测性_审计与回放规范.md  13_全球宏观雷达与机会风险引擎.md  量化交易-AI系统_技术方案_v1_已废弃.md
research/: IMPLEMENTATION_LOG.md  M1_IMPLEMENTATION_STATUS.md  M1_MILESTONE_END_TO_END.md  RELEASE_V0_1_ALPHA.md  TESTING_STRATEGY.md  WP0A_V31A_ALIGNMENT.md  WP0_PROBE_FINDINGS.md
scripts/: chaos_drill.py  mutation_check.py
tests/traps/: test_chaos_drill.py  test_qa_drills.py  test_t0_backtest_smoke.py  test_t11_t13_replay.py  test_t12_circuit_ladder.py  test_t14_vol_target.py  test_t15_crowding.py  test_t16_data_integrity.py  test_t16_regime_hysteresis.py  test_t17_regime_leverage.py  test_t18_committee_guardrails.py  test_t3_halt_zero_fill.py  test_t4_cost_sensitivity.py  test_t5_split_continuity.py  test_t6_settlement_gfv.py  test_t7_dual_engine_parity.py
tests/unit/: test_backtest_engine.py  test_backtest_report.py  test_brief_pipeline.py  test_cli.py  test_cli_e2e.py  test_config.py  test_core_strategies.py  test_cost_model.py  test_datasrc_adapters.py  test_datasrc_asof.py  test_datasrc_daily_bars.py  test_datasrc_freshness_artifacts.py  test_datasrc_macro.py  test_datasrc_reconcile_live.py  test_incident.py  (+38 more)
yquant/: __init__.py  __main__.py  cli.py  config.py  version.py
(+113 files in other folders)
