[tool.poetry]
name = "yquant"
version = "0.1.0a1"
description = "Local US equity research copilot and discipline engine."
authors = ["Junfu Yin <junfu.yin@gmail.com>"]
readme = "README.md"
packages = [{ include = "yquant" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
apscheduler = "^3.10.4"
backtrader = ">=1.9.78,<2.0"
duckdb = "^1.1.3"
empyrical = ">=0.5.5,<1.0"
loguru = "^0.7.2"
openai = "^1.59.0"
pandas = "^2.2.3"
pandas-market-calendars = ">=4.4,<6.0"
pyarrow = "^18.1.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
quantstats = ">=0.0.64,<1.0"
requests = "^2.32.3"
streamlit = "^1.41.1"
typer = "^0.15.1"

[tool.poetry.group.datasource]
optional = true

[tool.poetry.group.datasource.dependencies]
yfinance = ">=0.2.40,<1.0"
pandas-datareader = ">=0.10,<1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.8.6"
hypothesis = "^6.0"

[tool.poetry.scripts]
yquant = "yquant.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["yquant"]
omit = [
  "yquant/__main__.py",
  "yquant/ui/app.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
